agregue un archivo css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!--compatibilidad con un determinado navegador-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--configura la escala para diapositivos móviles-->
     <title>DRAGON BALL</title>
-    <link rel="stylesheet" href="">
-    <style>
+    <link rel="stylesheet" href="style.css">
+    <!--<style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -96,13 +96,13 @@
         width: 100%;
        }
 
-    </style>
+    </style> -->
     <script></script><!--link de javascript-->
 </head>
 <body>
     <!--contenido principal de la página-->
     <header>
-        <h1>Dragon ball</h1><!--encabezado de la página-->
+        <h1 class="main-heading">Dragon ball</h1><!--encabezado de la página-->
     </header>
 
     <nav><!--menú de navegación-->
@@ -118,7 +118,7 @@
     <main>
         <!-- contenido principal de la página-->
         <!--otros elementos como imagenes, listas, enlaces , etc-->
-        <section id="saga1">
+        <section id="saga1" class="saga-section">
             <h2>Saga sayayin</h2>
             <p>La historia comienza con la llegada de raditz a la tierra, secuestra al hijo de goku etc </p>
             <img src="img/MicrosoftTeams-image.png" alt="goku vs vegeta"> 
@@ -130,7 +130,7 @@
             </ol>
         </section>
 
-        <section id="saga2">
+        <section id="saga2" class="saga-section">
             <h2>Saga de freezer</h2>
             <p> Comienza con la llegada del villano al planeta Namek, en busca de las Dragon Balls. </p>
             <img src="img/saga de freezerr.png" alt="goku vs freezer">
@@ -142,7 +142,7 @@
             </ol>
         </section>
 
-        <section id="saga3">
+        <section id="saga3" class="saga-section">
             <h2>Saga de cell</h2>
             <p>Comienza con la llegada de Trunks del futuro al presente. Trunks es un Super Saiyan de un futuro alternativo </p>
             <img src="img/saga de cell.png" alt="gohan vs cell"> 
@@ -154,7 +154,7 @@
             </ol>
         </section>
 
-        <section id="saga4">
+        <section id="saga4" class="saga-section">
             <h2>Saga de majin boo</h2>
             <p>La saga de Majin Boo comienza con la llegada de Babidi, un mago malvado que busca liberar a Majin Boo </p>
             <img src="img/saga de majin boo.png" alt="goku vs majin boo"> 
